manifests/transparent_multiversion/service.yml
apiVersion: v1
kind: Service
metadata:
  name: call-me-maybe
  labels:
    app: call-me-maybe
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: call-me-maybe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-me-maybe-v1
  labels:
    app: call-me-maybe
    version: v1
spec:
  selector:
    matchLabels:
      app: call-me-maybe
      version: v1
  template:
    metadata:
      labels:
        app: call-me-maybe
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: hello
        image: istio/examples-helloworld-v1
        ports:
        - containerPort: 5000
          name: http
        securityContext:
          runAsUser: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: call-me-maybe-v2
  labels:
    app: call-me-maybe
    version: v2
spec:
  selector:
    matchLabels:
      app: call-me-maybe
      version: v2
  template:
    metadata:
      labels:
        app: call-me-maybe
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: hello
        image: istio/examples-helloworld-v1
        ports:
        - containerPort: 5000
          name: http
        securityContext:
          runAsUser: 1000
