manifests/transparent_multiversion/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: call-me-maybe
spec:
  hosts:
    - call-me-maybe.default.svc.cluster.local
  http:
  - match:
    - headers:
        end-user:
          exact: "Miss Piggy"
    route:
    - destination:
        host: call-me-maybe.default.svc.cluster.local
        subset: v2
  - route:
    - destination:
        host: call-me-maybe.default.svc.cluster.local
        subset: v1
